src/styles/pages/_landing.scss
/* ... */
.Gradient {
  background: linear-gradient(180deg, white 40%, $light-grey 80%);
}

.PanelViews {
  display: flex;
  flex-direction: column;
  padding-bottom: 50px;
  padding-top: 100px;

  &__title {
    font-size: $font-size-xxlarge;
    font-weight: 350;
    margin-bottom: 40px;
    text-align: center;
  }

  &__separatorBox {
    position: relative;
    width: 100%;
  }
  &__separator {
    position: absolute;
    top: 88px;
    height: 5px;
    width: 100%;
    background-color: lighten($mid-grey, 10%);
    padding-left: 150px;
    padding-right: 150px;
  }

  &__tabContainer {
    display: flex;
    justify-content: space-between;
    flex-direction: row;
    padding: 25px 200px 25px 200px;
    z-index: 1;

    @media only screen and (max-width: 750px) {
      padding: 25px 100px 25px 100px;
    }

    @media only screen and (max-width: 450px) {
      padding: 25px 50px 25px 50px;
    }
  }

  &__tabBox {
    display: flex;
    flex-direction: column;
    align-items: center;

    &__titleBox {
      height: 45px;
      width: calc((100vw - 420px) / 3);
      display: flex;
      flex-direction: column;
      justify-content: flex-end;

      @media only screen and (max-width: 750px) {
        width: calc((100vw - 220px) / 3);
      }

      @media only screen and (max-width: 450px) {
        width: calc((100vw - 120px) / 3);
      }
    }

    &__title {
      font-size: $font-size-large;
      font-weight: 450;
      color: $mid-grey;
      margin-bottom: 15px;
      transition: 0.3s;
      cursor: pointer;
      text-align: center;

      &--active {
        font-size: $font-size-large;
        font-weight: 450;
        color: $brand-color;
        margin-bottom: 15px;
        transition: 0.3s;
        cursor: pointer;
        text-align: center;
      }
    }

    &__button {
      width: 40px;
      height: 40px;
      border-radius: 20px;
      background-color: $mid-grey;
      transition: 0.3s;
      cursor: pointer;
      &--active {
        width: 40px;
        height: 40px;
        border-radius: 20px;
        background-color: $brand-color;
        transition: 0.3s;
        cursor: pointer;
      }
    }
  }

  &__content {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-bottom: 220px;
    min-height: 600px;

    @media only screen and (max-width: 750px) {
      padding-bottom: 100px;
    }

    // We want to set a min-height because if carousel render is happening don't want the div to collapse
    @media only screen and (max-width: 500px) {
      min-height: 400px;
    }

    @media only screen and (min-width: 750px) {
      min-height: 715px;
    }

    &__title {
      font-size: $font-size-xlarge;
      font-weight: 350;
      margin-bottom: 40px;
      height: 35px;
      max-width: 700px;
      text-align: center;

      @media only screen and (max-width: 700px) {
        font-size: $font-size-large;
      }
    }

    &__image {
      width: auto;
      height: auto;
      max-width: 700px;
      padding-bottom: 30px;

      @media only screen and (max-width: 750px) {
        width: 600px;
      }

      @media only screen and (max-width: 650px) {
        width: 500px;
      }
      @media only screen and (max-width: 550px) {
        width: 400px;
      }
      @media only screen and (max-width: 450px) {
        width: 350px;
      }
    }
  }
}

.API-backgroundWrapper {
  position: relative;
}

.API-background {
  margin-top: 110px;
  position: absolute;
  width: 100%;
  overflow: hidden;
  -webkit-transform: skewY(-8deg) translateY(-100px);
  transform: skewY(-8deg) translateY(-100px);
  -webkit-transform-origin: 0;
  transform-origin: 0;
  background: $dark-grey;
  height: 1250px;

  @media only screen and (max-width: 600px) {
    height: 1400px;
  }
}

.API {
  z-index: 1;
  align-items: center;
  display: flex;
  flex-direction: column;
  padding: 100px 100px 200px 100px;
  color: white;

  @media only screen and (max-width: 750px) {
    padding: 0px 40px 50px 40px;
  }

  &__textBox {
    max-width: 700px;
    display: flex;
    flex-direction: column;
    padding-bottom: 40px;

    &__title {
      font-size: $font-size-xlarge;
      font-weight: 450;
      margin-bottom: 30px;
      text-align: center;
    }

    &__itemList {
      display: flex;
      flex-direction: column;
    }

    &__item {
      font-size: $font-size-large;
      font-weight: 350;
      padding: 10px;
      text-align: center;
    }
  }
  &__exampleBox {
    display: flex;

    @media only screen and (max-width: 1000px) {
      flex-direction: column;
    }

    &__buttons {
      margin-top: 10px;
      display: flex;
      flex-direction: column;
      padding-left: 30px;

      &-title {
        font-size: $font-size-large;
        margin-bottom: 10px;
        font-weight: 500;
      }
    }
    &__code-separator {
      width: calc(100% - 20px);
      border: 1px solid $mid-grey;
      margin-top: 20px;
      margin-bottom: 10px;
      margin-left: 10px;

      @media only screen and (max-width: 1000px) {
        width: calc(100vw - 80px);
      }
    }
  }
}

.CodeMirror {
  font-family: monaco, Consolas, Lucida Console, monospace;
  font-weight: 500;
  width: 700px;
  box-shadow: 0 5px 4px 0 rgba(0, 0, 0, 0.4);

  &-gutters {
    background-color: $very-light-green;
  }

  @media only screen and (max-width: 750px) {
    width: 600px;
  }

  @media only screen and (max-width: 650px) {
    width: 500px;
  }
  @media only screen and (max-width: 550px) {
    width: 400px;
  }
  @media only screen and (max-width: 450px) {
    width: 350px;
  }
}
/* ... */

